--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -616,9 +616,10 @@ html {
         padding: 8px;
     }
 
-    .contact_content .submit_button {
+    #contact .contact_content .submit_button {
         padding: 16px 18px;
         appearance: none;
+        -webkit-appearance: none;
     }
 
     .contact_form {
