--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,10 +375,10 @@ html {
     display: block;
     padding: 8px;
     width: 100%;
-    line-height: 24px;
-    opacity: 0.4;
+    line-height: 24px; 
     font-size: 16px;
     border-radius: 0;
+    border: 1px solid grey;
 }
 
 .modal .pay_button {
